styles.css
body {
    overflow-x: hidden; /* Prevent horizontal scrolling */
    font-family: "Computer Modern Sans", sans-serif;
    font-size: 22px;
    position: relative;
    padding-top: 56px;
  }

  .navbar {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1000;
    padding: initial;
  }
  
  .navbar-brand.mb-0.h1 {
    font-size: 30px; /* Adjust the font size here */
    line-height: 1.65; /* Maintain a fixed height for the header */
    padding: initial;
  }
  
  #sidebar {
    position: fixed;
    top: -4px;
    left: -250px;
    width: 250px;
    height: 100%;
    background-color: #333;
    padding-top: 60px;
    transition: all 0.3s ease;
    z-index: 1000;
  }
  
  #sidebar.active {
    left: 0;
  }
  
  .sidebar-menu {
    list-style-type: none;
    padding: 0;
    margin: 0;
  }
  
  .sidebar-menu li {
    margin-bottom: 10px; /* Add some bottom margin for spacing */
    border-left: 5px solid transparent; /* Initially transparent border */
    border-top: 1px solid rgba(255, 255, 255, 0.2); /* Light border at the top */
    border-bottom: 1px solid rgba(255, 255, 255, 0.2); /* Light border at the bottom */
  }
  
  .sidebar-menu li a {
    display: block;
    padding: 10px 15px; /* Add padding to create space between text and border */
    color: #fff;
    text-decoration: none;
    transition: background-color 0.3s ease;
  }
  
  .sidebar-menu li a:hover {
    background-color: rgb(40, 94, 148);
  }
  
  /* Add this style to give the red left border on active state */
  #sidebar.active .sidebar-menu li {
    border-left-color: rgb(0, 0, 0);
  }
  
  .close-btn {
    position: absolute;
    top: 15px;
    right: 10px;
    color: #fff;
    background: none;
    border: none;
    font-size: 30px;
    cursor: pointer;
    width: 30px;
    height: 30px;
    padding: 0;
    line-height: 30px;
    text-align: center;
  }
  
  .icon-link {
    margin-right: 15px; /* Adjust spacing between icons */
  }
  
  .content {
    margin-left: 150px;
    margin-right: 150px;
    padding: 20px;
  }
  
  /* Add space between icons */
  .spacer {
    margin-right: 10px;
  }
  
  .dark-mode {
    background-color: #222; /* Dark background color */
    color: #fff; /* Light text color */
  }
  
  .main-content {
    background-color: #f8f9fa; /* Background color of the main content area */
    padding-left: 255px; /* Adjust according to the width of the sidebar */
  }
  
  .about-site {
    margin: 20px 0;
    padding: 20px;
    border-left: 5px solid rgb(44, 44, 76); /* blue bar on the left */
    background-color: rgb(229, 229, 255); /* light blue background color */
  }
  
  .about-site.dark-mode {
    background-color: #001f3f; /* Dark red background color for dark mode */
  }
  
  .about-site-content {
    margin-left: 10px; /* Margin to separate content from the red bar */
  }
  
  .about-site h4 {
    margin-top: 0; /* Remove default margin for h2 */
  }
  
  .about-site p {
    margin-bottom: 0; /* Remove default margin for paragraphs */
    font-size: 20px;
  }
  
  .blue-text {
    color: rgb(24, 24, 116); /* Blue color for text */
  }

  .footer {
    font-size: 15px;
  }


  
  #dark-mode-toggle {
    position: fixed;
    bottom: 20px;
    right: 20px;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    background-color: #91fff8; /* Default background color */
    border: none;
    color: #000; /* Default icon color */
    font-size: 24px;
    cursor: pointer;
    z-index: 1000; /* Ensure it appears above other elements */
    box-shadow: 0 2px 5px rgba(0, 0, 0, 1); /* Add shadow */
    transition: background-color 0.3s, color 0.3s, transform 0.3s, box-shadow 0.3s;
  }
  
  #dark-mode-toggle:hover {
    background-color: #38ded3; /* Change background color on hover */
    color: #000; /* Change icon color on hover */
  }
  
  #dark-mode-toggle:active {
    transform: scale(0.95); /* Add a slight scale effect on click */
  }
  
  @media screen and (max-width: 768px) {
    .content {
      margin-left: 0;
      margin-right: 0;
    }
  
    .about-site {
      margin: 20px 0;
      padding: 20px;
      border-left: 5px solid blue; /* blue bar on the left */
      background-color: rgb(229, 229, 255); /* light blue background color */
    }
  }
  
  #overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent black */
    display: none; /* Initially hidden */
    z-index: 999; /* Ensure overlay is beneath sidebar */
    
  }


  a {
    color: rgb(40, 94, 148); /* change 'blue' to any color you want */
  }

  a:hover {
    color: rgb(7, 32, 57); /* change 'blue' to any color you want */
  }
  
  a.icon-link {
    color: rgb(255, 255, 255); /* change 'blue' to any color you want */
  }

  a.icon-link:hover {
    color: rgb(144, 182, 218); /* change 'blue' to any color you want */
  }

  @font-face {
    font-family: 'dexter-font';
    src: url('custom-fonts/dexter-font/dexter-font.woff2') format('woff2'),  /* Modern Browsers */
         url('custom-fonts/dexter-font/dexter-font.woff') format('woff');    /* Older Browsers */
    font-weight: normal;
    font-style: normal;
}

@font-face {
  font-family: 'cheeky-rabbit';
  src: url('custom-fonts/cheeky-rabbit/cheeky-rabbit.woff2') format('woff2'),  /* Modern Browsers */
       url('custom-fonts/cheeky-rabbit/cheeky-rabbit.woff') format('woff');    /* Older Browsers */
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'cubic-font';
  src: url('custom-fonts/cubic-font/cubic-font.woff2') format('woff2'),  /* Modern Browsers */
       url('custom-fonts/cubic-font/cubic-font.woff') format('woff');    /* Older Browsers */
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'saiyan-sans';
  src: url('custom-fonts/saiyan-sans/saiyan-sans.woff2') format('woff2'),  /* Modern Browsers */
       url('custom-fonts/saiyan-sans/saiyan-sans.woff') format('woff');    /* Older Browsers */
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'samarkan-font';
  src: url('custom-fonts/samarkan-font/samarkan-font.woff2') format('woff2'),  /* Modern Browsers */
       url('custom-fonts/samarakan-font/samarkan-font.woff') format('woff');    /* Older Browsers */
  font-weight: normal;
  font-style: normal;
}

.dexter-font {
  font-family: 'dexter-font', sans-serif;
}

.cheeky-rabbit {
  font-family: 'cheeky-rabbit', sans-serif;
}

.cubic-font {
  font-family: 'cubic-font', sans-serif;
}

.saiyan-sans {
  font-family: 'saiyan-sans', sans-serif;
}

.samarkan-font {
  font-family: 'samarkan-font', sans-serif;
}

